--- a/main.html
+++ b/main.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div class="container">
+        <h1>Welcome to Sync5</h1>
+        <div class="row gap-0">
+            <div class="p-2 col-md-12 border border-1">
+               New Features
+            </div>
+            <div class="p-2 col-md-12 border border-1">
+                <p class="fs-3 mb-0 p-1">Mobile and Tablet support</p>
+                <p class="mb-3 p-1">With this new update you will be able to sync your work across a large number of platforms.</p>
+                <button type="submit" class="btn btn-primary p-1">Read more</button>
+            </div>
+        </div>
+        <div class="card-deck row gap-0 mt-1">
+            <div class="row-md-12 p-0">
+            <div class="p-2 col-md-4 border border-1 bg-danger">
+               Alert
+            </div>
+            <div class="p-2 col-md-4 border border-1 bg-danger">
+                <p class="fs-5 mb-0 p-1">Node Dead</p>
+                <p class="mb-3 p-1">Node 5 (east-us) is offline for the last 12 days.</p>
+            </div>
+        </div>
+        </div>
+
+        <div class="card mt-1 p-2 ml-0" style="width: 60rem; height :35rem;">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/013/830/831/small_2x/cute-little-kid-boy-swim-under-water-on-summer-holiday-vector.jpg" class="card-img-top p-0" alt="...">
+            <div class="card-header">
+            </div>
+            <div class="card-body">
+                <p class="card-title fs-4">President under Pressure</p>
+              <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
+              <p class="text-muted">Last updated 12 mins ago</p>
+            </div>
+        
+          </div> 
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
 </body>
-
 </html>
