--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
                 <button type="submit" class="btn btn-primary p-1">Read more</button>
             </div>
         </div>
-        <div class="card-deck row gap-0 mt-1">
+        <div class="row gap-0 mt-1">
             <div class="row-md-12 p-0">
             <div class="p-2 col-md-4 border border-1 bg-danger">
                Alert
