--- a/main.html
+++ b/main.html
@@ -9,19 +9,19 @@
 <body>
     <div class="container">
         <h1>Welcome to Sync5</h1>
-        <div class="row gap-0">
+        <div class="card row gap-0">
             <div class="p-2 col-md-12 border border-1">
                New Features
             </div>
             <div class="p-2 col-md-12 border border-1">
                 <p class="fs-3 mb-0 p-1">Mobile and Tablet support</p>
                 <p class="mb-3 p-1">With this new update you will be able to sync your work across a large number of platforms.</p>
-                <button type="submit" class="btn btn-primary p-1">Read more</button>
+                <button type="submit" class="card btn-primary p-1">Read more</button>
             </div>
         </div>
-        <div class="row gap-0 mt-1">
+        <div class="card row gap-0 mt-1">
             <div class="row-md-12 p-0">
-            <div class="p-2 col-md-4 border border-1 bg-danger">
+            <div class="p-2 col-md-4 border border-1 card bg-danger">
                Alert
             </div>
             <div class="p-2 col-md-4 border border-1 bg-danger">
@@ -31,7 +31,7 @@
         </div>
         </div>
 
-        <div class="card mt-1 p-2 ml-0" style="width: 60rem; height :35rem;">
+        <div class="card mt-2 p-2 ml-0" style="width: 60rem; height :35rem;">
             <img src="https://static.vecteezy.com/system/resources/thumbnails/013/830/831/small_2x/cute-little-kid-boy-swim-under-water-on-summer-holiday-vector.jpg" class="card-img-top p-0" alt="...">
             <div class="card-header">
             </div>
